minor updates for tests