@@ -18,7 +18,6 @@
  */
 package org.apache.iceberg.connect.v3;
 
-import static org.apache.iceberg.connect.service.ConnectorService.addConnectorConfigs;
 import static org.apache.iceberg.connect.service.IcebergTableClient.BASE_V3_TABLE_CONFIG;
 import static org.apache.iceberg.connect.service.IcebergTableClient.extractTableRecords;
 import static org.apache.iceberg.connect.service.IcebergTableClient.extractTableRecordsAsString;
@@ -29,13 +28,13 @@ import static org.apache.iceberg.connect.v3.dto.UserEventExtended.INFO_WRITE_DEF
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Stream;
 import org.apache.iceberg.Table;
 import org.apache.iceberg.connect.v3.dto.Info;
 import org.apache.iceberg.connect.v3.dto.InfoExtended;
 import org.apache.iceberg.connect.v3.dto.StructUserEvent;
 import org.apache.iceberg.connect.v3.dto.UserEvent;
-import org.apache.iceberg.relocated.com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -60,9 +59,7 @@ public class TestStructDefault extends IntegrationTestBaseV3 {
 
     runTest(
         useSchema,
-        addConnectorConfigs(
-            context().connectorCatalogProperties(),
-            ImmutableMap.of("iceberg.tables.defaults-enabled", String.valueOf(isDefaultsEnabled))),
+        Map.of("iceberg.tables.defaults-enabled", String.valueOf(isDefaultsEnabled)),
         List.of(TABLE_IDENTIFIER_V3),
         kafkaEvents);
 
